--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!-- The content below is only a placeholder and can be replaced.
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -16,6 +16,12 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-</ul>
+</ul> -->
+<!-- <p>App Component</p> -->
+<!-- <router-outlet></router-outlet> -->
 
+<!-- <h1>Angular Router</h1> -->
+<!-- <nav>
+  <a routerLink="/login" routerLinkActive="active">Login</a>
+</nav> -->
 <router-outlet></router-outlet>
